trunk/Archive2/bd/0880c3b21c0c18/output
main.cpp:28:9: error: reference to overloaded function could not be resolved; did you mean to call it?
        &foo<0>;
        ^~~~~~~
main.cpp:18:6: note: possible target for call
void foo(int (&)[5/I])
     ^
1 error generated.
